# python-vector-operation-library

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py  testing.py  testing2.py  vector_library.py
docs/source/: conf.py  index.rst  module.rst  vector2d.rst
src/: __init__.py
src/vector_library.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vector_library_new2.egg-info/: PKG-INFO  SOURCES.txt
tests/: testing.py  testing2.py
