[metadata]
name = vector-library
version = 0.0.1
author = Dilshan
author_email = projects.dilshan@gmail.com
description = For handle the 2d and 3d vector operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dilshan1997/python-vector-operation-library
home-page = https://github.com/Dilshan1997/python-vector-operation-library
project_urls =
    Bug Tracker = https://github.com/Dilshan1997/python-vector-operation-library/issues
    repository = https://github.com/Dilshan1997/python-vector-operation-library
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
