[metadata]
name = vector_library_new2
version = 0.0.12
author = Dilshan
author_email = projects.dilshan@gmail.com
description = For handle the 2D and 3D vector operations
long_description = file: README.md, 
long_description_content_type = text/markdown
url = https://github.com/Dilshan1997/python-vector-operation-library
Home-page = 'https://github.com/Dilshan1997/python-vector-operation-library'
project_urls =
    Bug Tracker = https://github.com/Dilshan1997/python-vector-operation-library/issues
    repository = https://github.com/Dilshan1997/python-vector-operation-library
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
